Added includeCount filter param.
